ProjectSourceCode/resources/css/main-style.css
/* This holds the main CSS that is applied to everything */

.navbar-brand {
    font-family: "Inter", sans-serif;
}

.navbar {
    box-shadow: 0 0 10px #2d2d2d29;
}

.nav-link {
    margin-right: 20px;
}


footer {
    box-shadow: 0 0 10px #2d2d2d29;
}


.recipe-card-image {
    width: 100%;
    height: 20rem;
    object-fit: cover;
    border-radius: 10px;
}


.recipe-card {
    border-radius: 10px;
}

.floating-shadow {
    box-shadow: 0 0 15px #2d2d2d9a;
}


.recipe-profile-picture {
    width: 4rem;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    object-fit: cover;
    border: 2px solid #aaa;
}

.comment-profile-picture {
    width: 2.5rem;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    object-fit: cover;
    border: 2px solid #aaa;
}


.navbar-profile {
    width: 60px;
    height: 60px;
    aspect-ratio: 1 / 1;
    border-radius: 50%;
    object-fit: cover;
    border: 2px solid #aaa;
}



 

